--- a/src/app/video-bg/video-background/video-background.component.html
+++ b/src/app/video-bg/video-background/video-background.component.html
@@ -1,6 +1,6 @@
-video-background.component.html
+<!-- video-background.component.html -->
 <video
-  src="assets/images/bg.mp4"
+  src="/assets/images/bg.mp4"
   autoplay
   muted
   loop
