--- a/src/app/event/profile/profile.component.html
+++ b/src/app/event/profile/profile.component.html
@@ -1,7 +1,12 @@
 <div class="container">
   <div class="header">
     <h1>
-      Welcome, User
+      <span class="welcome">
+        Welcome
+      </span>
+      <span class="user">
+        User
+      </span>
       <i class="pi pi-user" style="font-size: 2rem"></i>
     </h1>
 
@@ -12,26 +17,19 @@
       </div>
 
       <div class="cards">
-        <div class="section">
-          <div class="card">
-            <p-card>
-                <button class="card-button">My Application</button>
-            </p-card>
-          </div>
-        </div>
 
-        <div class="section section2">
-          <div class="card">
-            <p-card>
-                <button class="card-button">Overview</button>
-            </p-card>
-          </div>
-          <div class="card">
-            <p-card>
-                <button class="card-button">Prizes</button>
-            </p-card>
-          </div>
-        </div>
+
+       <div class="list-items">
+        <ul>
+          <li><button class="raised-button">Submit Application</button></li>
+          <li><button class="raised-button">Timeline</button></li>
+          <li><button class="raised-button">OverView</button></li>
+          <li><button class="raised-button">Team Members</button></li>
+          <li><button class="raised-button" style="background-color: lightsalmon;">Logout</button></li>
+        </ul>
+       </div>
+
+
       </div>
     </div>
   </div>
