--- a/src/app/event/hackathon/hackathon.component.css
+++ b/src/app/event/hackathon/hackathon.component.css
@@ -77,7 +77,9 @@
 }
 
 .button-w{
-    background: linear-gradient(135deg, gold, aqua);
+    background: linear-gradient(135deg, gold , aqua);
+    background-size: 200% 100%;
+    background-position: right bottom;
     border: none;
     margin-left: 12px;
     margin-right: 12px;
@@ -92,7 +94,7 @@
 
 
 .button-w:hover{
-    background: linear-gradient(135deg, aqua, gold);
+    background-position: left bottom;
     cursor: pointer;
 }
 
