--- a/src/app/event/login/login.component.html
+++ b/src/app/event/login/login.component.html
@@ -4,13 +4,17 @@
     </div>
   
     <div class="form">
-      <form action="">
+      <form>
        
           <div class="p-inputgroup">
               <span class="p-inputgroup-addon">
                   <i class="pi pi-user"></i>
               </span>
-              <input pInputText placeholder="Username" />
+              <input
+               pInputText 
+               placeholder="Username" 
+               name="userName"
+               [(ngModel)]="formData.userName"/>
           </div>
   
   
@@ -18,17 +22,34 @@
               <span class="p-inputgroup-addon">
                   <i class="pi pi-lock"></i>
               </span>
-              <input pInputText placeholder="Password" />
+              <input 
+              [(ngModel)]="formData.passWord" 
+              pInputText 
+              type="password"
+              name="passWord"
+              placeholder="Password" />
           </div>
   
           <div class="p-inputgroup">
               <span class="p-inputgroup-addon">
                   <i class="pi pi-star-fill"></i>
               </span>
-              <input value="Hack The Blaze 1.0" id="disabled-input" type="text" pInputText [disabled]="true" />
+              <input 
+              [(ngModel)]="formData.event" 
+              value="Hack The Blaze 1.0" 
+              id="disabled-input" 
+              type="text" 
+              pInputText 
+              name="event"
+              [disabled]="true" />
           </div>
   
-          <button class="button-w" (click)="login()">Login</button>
+          <button class="button-w" 
+          [disabled]="formData.userName=='' 
+          || formData.passWord==''
+          || validatePassword(formData.passWord)==false
+          " 
+          (click)="login()">Login</button>
   
           <div class="widgets">
               <p-button (click)="goto('')" label="Forgot Password?" [link]="true" class="custom-button"></p-button>
